# swm-desk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  overlay.html
.cache/clangd/index/: AppBootstrap.cpp.D537838FE73E651E.idx  AppBootstrap.h.0EF61E5BCFCB1F73.idx  ApplicationMenuBuilder.cpp.89583F9B862C4156.idx  ApplicationMenuBuilder.h.F5C4117B748216A1.idx  BlockingQueue.h.FB84DA9F4BD74380.idx  ColoredFormatter.cpp.7B85B386EFD5A584.idx  ColoredFormatter.h.3432A13685B0C97F.idx  Configuration.cpp.F23A67B5D623DECD.idx  Configuration.h.4147DB89A982B2F8.idx  ConsoleSink.cpp.272C7DC00A4720AB.idx  ConsoleSink.h.76ED7F684D00483A.idx  DashboardModule.cpp.E02A12A2D7ADEF2A.idx  DashboardModule.h.54B5D2B808B3A95F.idx  Environment.cpp.849B3555530F00F0.idx  Environment.h.329E2F1A30C9EF2D.idx  EventBus.cpp.C2A88E28D8A53FBE.idx  EventBus.h.382FB51E250445A2.idx  FileSink.cpp.A7B1A3CD9FCE7C08.idx  FileSink.h.87C4800A608032F7.idx  IConfiguration.h.274C1C4068D342DF.idx  IEnvironment.h.5AE7BD528C1615B6.idx  IEventBus.h.F8AAD48BCF5941FD.idx  ILogFormatter.h.7B2C37B6E17CDDB6.idx  ILogSink.h.4744365248D84BB5.idx  ILogger.h.3439FBA9EA9AF66A.idx  IModule.h.8C98CA433BFBAFE6.idx  IPlugin.h.78E8E1B6DC29EDD1.idx  IRuntimeService.h.42F4AC5735FA45CA.idx  IServiceRegistry.h.A7C24D08325336E2.idx  LogCategory.h.D35FBA0C7398F06E.idx  LogEntry.h.418A9B3DDCBE3B16.idx  LogExportService.cpp.B469A0108EDB09AB.idx  LogExportService.h.177CED2F3770C783.idx  LogLevel.h.F66621F1E5D37CE1.idx  LogListModel.cpp.E1DAE0E8922DB27B.idx  LogListModel.h.052A7D706933B5A4.idx  LogRepository.cpp.EDB7957D515305E5.idx  LogRepository.h.AF3329DC82B66290.idx  LogStatistics.cpp.17A2143420C858F5.idx  LogStatistics.h.AB986B214C673CE8.idx  (+68 more)
app/: AppBootstrap.cpp  AppBootstrap.h  main.cpp
app/menu/: ApplicationMenuBuilder.cpp  ApplicationMenuBuilder.h
application/: README.md
application/services/: ModuleManager.cpp  ModuleManager.h  ServiceRegistry.cpp  ServiceRegistry.h
core/: README.md
core/contracts/: IConfiguration.h  IDatabase.h  IEnvironment.h  IEventBus.h  ILogger.h  IModule.h  IPlugin.h  IRuntimeService.h  IServiceRegistry.h  ISettings.h
docs/: ARCHITECTURE.md  CODING_STANDARD.md  DEPENDENCY_RULE.md  MODULE_SYSTEM.md  NAMING_CONVENTION.md  PACKAGE_SYSTEM.md  PLUGIN_SYSTEM.md  PROJECT_STRUCTURE.md  ROADMAP.md
docs/architecture/: EVENT_SYSTEM.md  MODULE_ARCHITECTURE.md  NAVIGATION_FRAMEWORK.md  PLATFORM_ARCHITECTURE.md  SERVICE_ARCHITECTURE.md  THEME_ENGINE.md  UI_ARCHITECTURE.md  WORKSPACE_SYSTEM.md
docs/component-guidelines/: COMPONENT_CATALOG.md
docs/design-system/: DESIGN_SYSTEM_SPEC.md
infrastructure/: README.md
integrations/obs/plugin/: CMakeLists.txt  README.md  lower-thirds-source.cpp  plugin-main.cpp
marketplace/: README.md
modules/: README.md
modules/dashboard/: DashboardModule.cpp  DashboardModule.h
plugins/: README.md
plugins/manager/: PluginManager.cpp  PluginManager.h
runtime/bootstrap/: RuntimeBootstrap.cpp  RuntimeBootstrap.h  RuntimeContext.cpp  RuntimeContext.h  WindowFactory.cpp  WindowFactory.h  WindowId.h  WindowManager.cpp  WindowManager.h
runtime/configuration/: Configuration.cpp  Configuration.h
runtime/diagnostics/: RuntimeDiagnostics.cpp  RuntimeDiagnostics.h
runtime/environment/: Environment.cpp  Environment.h
runtime/events/: EventBus.cpp  EventBus.h  RuntimeEvent.h  SubscriptionToken.h
runtime/graphics/: GraphicsEngineService.cpp  GraphicsEngineService.h  GraphicsPreviewItem.cpp  GraphicsPreviewItem.h  GraphicsResourceService.cpp  GraphicsResourceService.h  GraphicsRuntime.cpp  GraphicsRuntime.h  GraphicsStatistics.cpp  GraphicsStatistics.h  RenderScheduler.cpp  RenderScheduler.h  RenderSession.cpp  RenderSession.h  RenderSessionManager.cpp  RenderSessionManager.h  ValidationSceneBuilder.cpp  ValidationSceneBuilder.h
runtime/graphics/contracts/: GraphicsFrameSnapshot.h  IGraphicsResourceService.h  ISceneBuilder.h  RenderRequest.h  RenderSessionId.h
runtime/logging/: ILogger.h  LogCategory.h  LogEntry.h  LogExportService.cpp  LogExportService.h  LogLevel.h  LogListModel.cpp  LogListModel.h  LogRepository.cpp  LogRepository.h  LogStatistics.cpp  LogStatistics.h  Logger.cpp  Logger.h  LoggerFacade.cpp  LoggerFacade.h
runtime/logging/Formatter/: ColoredFormatter.cpp  ColoredFormatter.h  ILogFormatter.h  TextFormatter.cpp  TextFormatter.h
runtime/logging/sinks/: ConsoleSink.cpp  ConsoleSink.h  FileSink.cpp  FileSink.h  ILogSink.h  MacStatusBarLogViewer.h  MacStatusBarLogViewer.mm  MacStatusBarService.h  MacStatusBarService.mm  MemorySink.cpp  MemorySink.h  WindowOverlaySink.cpp  WindowOverlaySink.h
runtime/notifications/: NotificationListModel.cpp  NotificationListModel.h  NotificationRepository.cpp  NotificationRepository.h  NotificationService.cpp  NotificationService.h  NotificationStatistics.cpp  NotificationStatistics.h
runtime/notifications/contracts/: NotificationAction.h  NotificationActionId.h  NotificationCategory.h  NotificationHandle.cpp  NotificationHandle.h  NotificationId.h  NotificationLifecycle.h  NotificationRetentionPolicy.h  NotificationSeverity.h  NotificationSnapshot.h  ServiceId.h
runtime/tasks/: TaskListModel.cpp  TaskListModel.h  TaskRepository.cpp  TaskRepository.h  TaskService.cpp  TaskService.h  TaskStatistics.cpp  TaskStatistics.h
runtime/tasks/contracts/: TaskCategory.h  TaskHandle.cpp  TaskHandle.h  TaskId.h  TaskProgress.h  TaskRetentionPolicy.h  TaskSnapshot.h  TaskState.h
runtime/threading/: BlockingQueue.h
sdk/: README.md
shared/: README.md  constants.h  enums.h  types.h  version.h
storage/: README.md
tests/: README.md
ui/components/: qmldir
ui/components/buttons/: IconButton.qml  PrimaryButton.qml  ToggleButton.qml
ui/components/cards/: BaseCard.qml  DeviceCard.qml
ui/foundation/: README.md  SWMAccessibility.qml  SWMColors.qml  SWMElevation.qml  SWMInteraction.qml  SWMMotion.qml  SWMRadius.qml  SWMSpacing.qml  SWMTypography.qml  qmldir
ui/playground/: PlaygroundApp.qml
ui/theme/: AccentEngine.qml  ThemeEngine.qml  qmldir
ui/windows/: GraphicsPreviewWindow.qml  LogViewerWindow.qml
(+18 files in other folders)
